# mythica

./: Cargo.toml  README.md  build.sh
assets/shaders/: shader.fragment  shader.vertex
mythica/: Cargo.toml
mythica/src/: game.rs  main.rs
mythica_engine/: Cargo.toml
mythica_engine/src/: application.rs  lib.rs
mythica_engine/src/core/: application.rs  mod.rs  resource.rs
mythica_engine/src/game/: billboard.rs  camera.rs  mod.rs  state.rs
mythica_engine/src/graphics/: billboard.rs  mod.rs  shader.rs
mythica_math/: Cargo.toml
mythica_math/src/matrix/: glium.rs  projection.rs  view.rs
mythica_math/src/vector/: glium.rs
src/: color.rs  core.rs  game.rs  main.rs  matrix.rs  shader.rs  vector.rs
src/core/: application.rs  color.rs  mod.rs  resource.rs  shader.rs
src/core/color/: colors.rs
src/core/vector/: vec2.rs  vec3.rs
src/engine/core/: application.rs  color.rs  mod.rs  shader.rs
src/engine/core/matrix/: glium.rs  view.rs
src/engine/core/vector/: mod.rs
src/engine/game/: billboard.rs  mod.rs  state.rs
src/game/: application.rs  application_builder.rs  billboard.rs  camera.rs  mod.rs  state.rs
src/matrix/: glium.rs  mod.rs  projection.rs  view.rs
src/vector/: glium.rs  mod.rs  vec2.rs  vec3.rs
